--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -4,17 +4,17 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "node server.js"
+    "ts-node": "ts-node"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/node": "^16.9.1",
     "express": "^4.17.1",
-    "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
   },
   "devDependencies": {
-    "@types/express": "^4.17.13"
+    "@types/express": "^4.17.13",
+    "ts-node": "^10.2.1"
   }
 }
