--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "ts-node": "ts-node"
+    "ts-node": "ts-node",
+    "start": "ts-node ./server.ts"
   },
   "author": "",
   "license": "ISC",
