--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -17,7 +17,11 @@
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.15.1",
     "element-ui": "^2.15.2",
-    "nuxt": "^2.15.7"
+    "install": "^0.13.0",
+    "node-sass": "^6.0.1",
+    "npm": "^7.23.0",
+    "nuxt": "^2.15.7",
+    "sass-loader": "^10.0.0"
   },
   "devDependencies": {
     "@ava/babel": "^1.0.1",
